[project]
name = "py3-tts"
dynamic = ["version"]
dependencies = [
    "pywin32; platform_system == 'Windows'",
    "comtypes; platform_system == 'Windows'",
    "pyobjc-framework-cocoa>=2.4; platform_system=='Darwin'",
    "pyobjc-framework-AVFoundation>=2.4; platform_system=='Darwin'",
    "pyobjc-framework-ExceptionHandling>=2.4; platform_system=='Darwin'",
]
description = "Text to Speech (TTS) library for Python 3. Works without internet connection or delay. Supports multiple TTS engines, including Sapi5, nsss, and espeak."
readme = "README.md"
authors = [{ name = "Vignesh Rao", email = "svignesh1793@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["pyttsx", "ivona", "pyttsx for python3", "TTS for python3", "py3-tts", "text to speech for python", "tts",
    "text to speech", "speech", "speech synthesis", "offline text to speech", "offline tts", "gtts"]
requires-python = ">=3"

[tool.setuptools]
packages = ["pyttsx3", "pyttsx3.drivers"]

[tool.setuptools.dynamic]
version = { attr = "pyttsx3.version" }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/thevickypedia/py3-tts"
Source = "https://github.com/thevickypedia/py3-tts"
Docs = "https://py3-tts.vigneshrao.com"
